--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^2.29.3",
     "express": "^4.18.2",
+    "nanoid": "^4.0.2",
     "nedb-promise": "^2.0.1"
   },
   "devDependencies": {
