--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,8 @@
     "rules": {
         "no-console": "off",
         "linebreak-style": "off",
-        "import/extensions": "off"
+        "import/extensions": "off",
+        "no-plusplus": "off",
+        "no-await-in-loop": "off"
     }
 }
