--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "linebreak-style": "off",
         "import/extensions": "off",
         "no-plusplus": "off",
-        "no-await-in-loop": "off"
+        "no-await-in-loop": "off",
+        "consistent-return": "off"
     }
 }
